# agentic-ai-pandit

./: .env.example  .gcloudignore  .gitignore  .mailmap  ARCHITECTURE.md  FEASIBILITY_REPORT.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  REUSE_ANALYSIS.md  TECH_STACK.md  TECH_STACK_FINAL.md  WORKFLOW.md  cloudbuild.yaml  docker-compose.yml
.github/workflows/: ci.yml  deploy-backend.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  base.py  prompt_manager.py  structured_output.py
backend/app/agents/prompts/: __init__.py  dasha_expert.md  forensic_expert.md  lagna_expert.md  varga_expert.md
backend/app/api/: deps.py
backend/app/api/middleware/: auth.py  error_handler.py  rate_limit.py  request_id.py
backend/app/api/routers/: __init__.py  admin.py  candidate.py  health.py  rectify.py  sessions.py
backend/app/db/: engine.py  models.py  operations.py
backend/app/event_store/: __init__.py
backend/app/models/: btr.py  events.py  session.py  stream.py
backend/app/orchestration/: graph.py  state.py
backend/app/orchestration/nodes/: __init__.py  critic.py  dasha_filter.py  forensic_filter.py  lagna_filter.py  varga_filter.py
backend/app/queue/: worker.py
backend/app/tools/: base.py  ephemeris_client.py
backend/app/tools/definitions/: __init__.py  dasha_tools.py  ephemeris_tools.py  forensic_tools.py  special_points_tools.py  strength_tools.py  varga_tools.py  yoga_tools.py
backend/deploy/: cloudrun-api.yaml  cloudrun-btr-worker.yaml  cloudrun-ephemeris.yaml
backend/ephemeris/: Dockerfile  engine.py  main.py  models.py
backend/ephemeris/routers/: health.py  positions.py  sunrise.py
backend/migrations/: env.py
backend/migrations/versions/: a65c6fd92bb9_initial_schema.py
backend/prompts/v1/: critic.md
backend/tests/: conftest.py
backend/tests/unit/: test_auth.py  test_config.py  test_dasha_tools.py  test_db.py  test_ephemeris_tools.py  test_event_store.py  test_health.py  test_models.py  test_rate_limit.py  test_structured_output.py  test_tool_registry.py  test_varga_tools.py  test_worker.py
frontend/: .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
frontend/__tests__/: DashboardPage.test.tsx
frontend/app/api/drafts/: route.ts
frontend/app/api/health/: route.ts
frontend/app/api/sessions/: route.ts
frontend/app/api/sessions/[id]/: route.ts
frontend/app/api/sessions/batch/: route.ts
frontend/app/api/sessions/export/: route.ts
frontend/app/api/webhooks/clerk/: route.ts
frontend/components/: Navbar.tsx
frontend/hooks/__tests__/: use-auto-save.test.ts
frontend/lib/__tests__/: date-utils.test.ts
frontend/lib/config/: env.ts
frontend/lib/db-stub/: index.ts  schema.ts
frontend/lib/server/: audit.ts  favorite-store.ts  session-ownership.ts  user-sync.ts
frontend/lib/shared-types/: index.ts  types.ts
scripts/: deploy.sh  setup-gcp.sh
(+5 files in other folders)
